--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -7,6 +7,10 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    # Add permissions to read organization secrets
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v3
 
@@ -14,7 +18,12 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: '4.4.3'
-      
+
+      - name: Install renv and rsconnect
+        run: |
+          install.packages(c("renv", "rsconnect"))
+        shell: Rscript {0}
+        
       - name: Install system dependencies
         run: |
           sudo apt-get update
@@ -29,11 +38,6 @@ jobs:
             libpng-dev \
             libtiff5-dev \
             libjpeg-dev
-          
-      - name: Install renv and rsconnect
-        run: |
-          install.packages(c("renv", "rsconnect"))
-        shell: Rscript {0}
 
       - name: Cache renv packages
         uses: actions/cache@v3
@@ -46,7 +50,7 @@ jobs:
       - name: Restore and install dependencies through renv
         run: |
           renv::restore()
-          install.packages("rsconnect")  # Ensure rsconnect is available for deployment
+          install.packages("rsconnect")
         shell: Rscript {0}
 
       - name: Authorize and deploy to shinyapps.io
@@ -55,19 +59,39 @@ jobs:
           SHINYAPPS_SECRET: ${{ secrets.SHINYAPPS_SECRET }}
           SHINYAPPS_ACCOUNT: ${{ secrets.SHINYAPPS_ACCOUNT }}
         run: |
+          # Debug: Check if environment variables are set
+          cat <<EOF | bash
+          echo "Token exists: $([ ! -z "$SHINYAPPS_TOKEN" ] && echo "Yes" || echo "No")"
+          echo "Secret exists: $([ ! -z "$SHINYAPPS_SECRET" ] && echo "Yes" || echo "No")"
+          echo "Account exists: $([ ! -z "$SHINYAPPS_ACCOUNT" ] && echo "Yes" || echo "No")"
+          EOF
+          
+          # Set account info 
+          token <- Sys.getenv("SHINYAPPS_TOKEN")
+          secret <- Sys.getenv("SHINYAPPS_SECRET")
+          account <- Sys.getenv("SHINYAPPS_ACCOUNT")
+          
+          # Show account name
+          cat("Using account name:", account, "\n")
+          
+          # Validating the authentication info
+          if (token == "" || secret == "" || account == "") {
+            stop("Missing shinyapps.io authentication information. Please check your organization secrets.")
+          }
+          
           rsconnect::setAccountInfo(
-            name = Sys.getenv("SHINYAPPS_ACCOUNT"),
-            token = Sys.getenv("SHINYAPPS_TOKEN"),
-            secret = Sys.getenv("SHINYAPPS_SECRET")
+            name = account,
+            token = token,
+            secret = secret
           )
           
-          # a list of files to exclude while deploying
+          # a list of files to exclude (rsconnect folder and any other unwanted files)
           exclude_list <- c("rsconnect/", ".git/", ".github/", ".gitignore", "README.md")
           
-          # Deploy with renv but exclude some files and folders
+          # Deploy with renv but exclude the rsconnect folder
           rsconnect::deployApp(
             appName = "${{ github.event.repository.name }}",
-            account = Sys.getenv("SHINYAPPS_ACCOUNT"),
+            account = account,
             forceUpdate = TRUE,
             appFiles = NULL,  # Setting to NULL will include all files except those in appFileIgnore
             appFileIgnore = exclude_list,
