improved the yaml file

--- a/.github/workflows/deploy_app.yml
+++ b/.github/workflows/deploy_app.yml
@@ -2,8 +2,6 @@ name: Deploy Shiny App
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:  # Added manual trigger option
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -18,7 +16,7 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: '4.4.0'  # Changed to more stable version
+          r-version: '4.4.3'
           
       - name: Install system dependencies
         run: |
@@ -58,39 +56,24 @@ jobs:
             invisible(options(
               renv.config.cache.enabled = TRUE,
               renv.config.cache.symlinks = TRUE,
-              renv.config.install.verbose = TRUE  # Changed to TRUE for better debugging
+              renv.config.install.verbose = FALSE
             ))
             renv::restore(prompt = FALSE)
           } else {
             cat("No renv.lock file found, skipping renv::restore()\n")
-            # Install required packages if no renv.lock exists
-            install.packages(c("shiny", "rsconnect"))
           }
           if (!requireNamespace("rsconnect", quietly = TRUE)) {
             install.packages("rsconnect")
           }
         shell: Rscript {0}
       
-      # Added cleanup step
-      - name: Clean repository for deployment
-        run: |
-          # Remove files not needed in the deployed app
-          if [ -f ".gitignore" ]; then
-            cat .gitignore
-          fi
-          # Remove common development files
-          rm -rf .git .github .gitignore README.md
-      
       - name: Authorize and deploy app
         env:
-          SHINYAPPS_NAME: ${{ secrets.SHINYAPPS_NAME }}
+          SHINYAPPS_NAME: ${{ secrets.SHINYAPPS_USER }}
           SHINYAPPS_TOKEN: ${{ secrets.SHINYAPPS_TOKEN }}
           SHINYAPPS_SECRET: ${{ secrets.SHINYAPPS_SECRET }}
           GITHUB_REPOSITORY_NAME: ${{ github.event.repository.name }}
         run: |
-          # Improved error handling and logging
-          options(warn = 1)  # Print warnings immediately
-          
           token <- Sys.getenv("SHINYAPPS_TOKEN")
           secret <- Sys.getenv("SHINYAPPS_SECRET")
           account <- Sys.getenv("SHINYAPPS_NAME")
@@ -104,44 +87,30 @@ jobs:
           }
           
           # Set the account info
-          tryCatch({
-            rsconnect::setAccountInfo(
-              name = account,
-              token = token,
-              secret = secret
-            )
-            
-            # Verify account is registered
-            accounts <- rsconnect::accountInfo()
-            cat("Account registered:", account %in% accounts$name, "\n")
-            
-            # Create .gitignore for rsconnect directory if it doesn't exist
-            if (!dir.exists("rsconnect")) {
-              dir.create("rsconnect")
-            }
-            
-            # List files in the app directory for debugging
-            cat("Files to be deployed:\n")
-            list.files(".", recursive = FALSE)
-            
-            # Deploy the app with only the essential parameters
-            rsconnect::deployApp(
-              appDir = ".",
-              appName = app_name,
-              account = account,
-              forceUpdate = TRUE,
-              launch.browser = FALSE,
-              logLevel = "verbose"  # Added for better logging
-            )
-          }, error = function(e) {
-            cat("Error during deployment:\n")
-            print(e)
-            stop("Deployment failed. See error message above.")
-          })
+          rsconnect::setAccountInfo(
+            name = account,
+            token = token,
+            secret = secret
+          )
+          
+          # Verify account is registered
+          accounts <- rsconnect::accountInfo()
+          cat("Account registered:", account %in% accounts$name, "\n")
+          
+          # Create .gitignore for rsconnect directory if it doesn't exist
+          if (!dir.exists("rsconnect")) {
+            dir.create("rsconnect")
+          }
+          
+          # Deploy the app with only the essential parameters
+          rsconnect::deployApp(
+            appDir = ".",
+            appName = app_name,
+            account = account,
+            forceUpdate = TRUE
+          )
         shell: Rscript {0}
       
       - name: Post-deployment message
         if: success()
-        run: |
-          echo "Deployment complete! App published to shinyapps.io"
-          echo "View your app at https://${{ secrets.SHINYAPPS_NAME }}.shinyapps.io/${{ github.event.repository.name }}/"
+        run: echo "Deployment complete! App published to shinyapps.io"
